# audiobookctl

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
docs/plans/: 2025-12-27-audiobookctl-design.md  2025-12-27-phase1-show-command.md  2025-12-27-phase2-edit-design.md  2025-12-27-phase2-edit-implementation.md  2025-12-28-batch-lookup-design.md  2025-12-28-batch-lookup-implementation.md  2025-12-28-optional-placeholders-design.md  2025-12-28-optional-placeholders.md  2025-12-29-pending-command-design.md  2025-12-29-pending-command.md  2025-12-29-trust-source-design.md  2025-12-29-trust-source-impl.md  2025-12-31-series-title-and-auxiliary-files.md  2026-01-02-idempotent-organize-local-search-impl.md  2026-01-02-idempotent-organize-local-search.md
src/: cli.rs  config.rs  hash.rs  main.rs
src/commands/: backups.rs  clean.rs  edit.rs  fields.rs  fix.rs  index.rs  init.rs  lookup.rs  lookup_all.rs  mod.rs  organize.rs  pending.rs  rehash.rs  search.rs  show.rs
src/database/: mod.rs
src/editor/: diff.rs  mod.rs  toml.rs
src/lookup/: api.rs  asin.rs  merge.rs  mod.rs  trusted.rs
src/metadata/: fields.rs  mod.rs  reader.rs  writer.rs
src/organize/: format.rs  mod.rs  planner.rs  scanner.rs  tree.rs
src/safety/: backup.rs  mod.rs  pending.rs
tests/: cli_tests.rs  lookup_all_tests.rs
