[package]
name = "audiobookctl"
version = "0.12.1"
edition = "2021"
description = "CLI tool for reading, editing, and organizing m4b audiobook metadata"
license = "MIT"
repository = "https://github.com/jsvana/audiobookctl"
keywords = ["audiobook", "m4b", "metadata", "cli"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
clap = { version = "4", features = ["derive"] }
mp4ameta = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
thiserror = "2"
anyhow = "1"
toml = "0.8"
dirs = "5"
sha2 = "0.10"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
urlencoding = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
